--- a/css/tabla.css
+++ b/css/tabla.css
@@ -20,6 +20,7 @@ table.cobertura_table {
   font-weight: 400;
   font-style: normal;
   font-size: .75em;
+  width: 100%;
 }
 
 
@@ -36,16 +37,14 @@ table.cobertura_table td {
   
 }
 table.cobertura_table th {
-  border-right: 1px solid #9f4e993d;
+  border-right: 0px solid #9f4e993d;
   padding: 8px 3px;
 }
 table.cobertura_table tbody td {
   font-size: 13px;
   color: #55575A;
 }
-table.cobertura_table tr:nth-child(even) {
-  background: #F6F0F7;
-}
+
 
 
 table.cobertura_table tbody th {
@@ -56,11 +55,13 @@ table.cobertura_table tbody th {
 }
 
 table.cobertura_table thead th {
-  background: #6D4162;
-  background: -moz-linear-gradient(top, #917089 0%, #7b5471 66%, #6D4162 100%);
+  
+  background: /*#f3f0f3;
+   background: -moz-linear-gradient(top, #917089 0%, #7b5471 66%, #6D4162 100%);
   background: -webkit-linear-gradient(top, #917089 0%, #7b5471 66%, #6D4162 100%);
   background: linear-gradient(to bottom, #917089 0%, #7b5471 66%, #6D4162 100%);
-  /* border-bottom: 4px solid #F230B9; */
+  border-bottom: 4px solid #F230B9; 
+  */
 }
 
 table.cobertura_table thead th {
@@ -69,7 +70,7 @@ table.cobertura_table thead th {
   z-index: 1;
 
 }
-table.cobertura_table th:first-child {
+table.cobertura_table tr:first-child th:first-child {
   background-color: #f230b9;
   position: sticky;
   left: -5px;
@@ -85,10 +86,9 @@ table.cobertura_table thead th:first-child {
 
 table.cobertura_table thead th {
   font-weight: normal;
-  color: #FFFFFF;
   text-align: center;
   border-bottom:none;
-  padding: 10px 0px;
+  padding: 0px 0px;
 }
 table.cobertura_table tfoot {
   font-weight: bold;
@@ -110,7 +110,7 @@ table.cobertura_table thead th:first-child {
 } 
 
 table.cobertura_table thead a:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 table.cobertura_table td.selected {
@@ -119,7 +119,7 @@ table.cobertura_table td.selected {
   background: #f2e0f2;
 }
 table.cobertura_table td:hover {
-  font-size: 12px;
+  font-size: 13px;
   color: #fff9ff;
   background: #917089;
   cursor:pointer;
@@ -140,7 +140,6 @@ table.cobertura_table tr td:first-child {
 }
 
 table.cobertura_table th:first-child {
-  background-color: #f8a5e1;
   position: sticky;
   left: -5px;
   z-index: 5;
@@ -183,7 +182,7 @@ table.cobertura_table a > div {
 .rounded {
 --radius: 10px;
 /**/--border-color:hsl(240, 12%, 86%);
-  border: 1px solid var(--border-color); 
+  border: 0px solid var(--border-color); 
 border-radius: var(--radius);
 border-spacing: 0;
 }
@@ -195,7 +194,7 @@ border-spacing: 0;
 /* design */
 .rounded th, .rounded td {
 padding: .2rem;
-/* */ border: 1px solid var(--border-color);
+/* */ border: 0px solid var(--border-color);
 /* box-shadow: -1px -1px var(--border-color); */
 }
 .rounded th {
@@ -204,87 +203,9 @@ background: none;
 }
 
 
-
-/* COLORES TABLA Columma S3 */
-table.cobertura_table thead tr:first-child th:nth-child(5),
-table.cobertura_table thead tr:nth-of-type(2) th:nth-child(4),
-table.cobertura_table thead tr:nth-of-type(2) th:nth-child(5) ,
-table.cobertura_table thead tr:nth-of-type(2) th:nth-child(6)  {
-  background: #9185d8;
+table.cobertura_table tbody tr:nth-child(even) {
+  background: #F6F0F7;
 }
-
-table.cobertura_table tbody td:nth-of-type(5),
-table.cobertura_table tbody td:nth-of-type(6),
-table.cobertura_table tbody td:nth-of-type(7),
-
-table.cobertura_table tbody th:nth-child(5),
-table.cobertura_table tbody th:nth-child(6),
-table.cobertura_table tbody th:nth-child(7) {
-  background: #cec6fc;
-}
-
-/* COLORES TABLA Columma Estatal */
-table.cobertura_table thead tr:first-child th:nth-child(18),
-
-table.cobertura_table thead tr:nth-of-type(2) th:nth-child(19),
-table.cobertura_table thead tr:nth-of-type(2) th:nth-child(20),
-table.cobertura_table thead tr:nth-of-type(2) th:nth-child(21),
-table.cobertura_table thead tr:nth-of-type(2) th:nth-child(22) ,
-table.cobertura_table thead tr:nth-of-type(2) th:nth-child(23),
-table.cobertura_table thead tr:nth-of-type(2) th:nth-child(24),
-table.cobertura_table thead tr:nth-of-type(2) th:nth-child(25) ,
-table.cobertura_table thead tr:nth-of-type(2) th:nth-child(26)  {
-  background: #b178ad;
-}
-
-table.cobertura_table tbody td:nth-of-type(20),
-table.cobertura_table tbody td:nth-of-type(21),
-table.cobertura_table tbody td:nth-of-type(22),
-table.cobertura_table tbody td:nth-of-type(23),
-table.cobertura_table tbody td:nth-of-type(24),
-table.cobertura_table tbody td:nth-of-type(25),
-table.cobertura_table tbody td:nth-of-type(26),
-table.cobertura_table tbody td:nth-of-type(27),
-
-table.cobertura_table tbody th:nth-child(20),
-table.cobertura_table tbody th:nth-child(21),
-table.cobertura_table tbody th:nth-child(22),
-table.cobertura_table tbody th:nth-child(23),
-table.cobertura_table tbody th:nth-child(24),
-table.cobertura_table tbody th:nth-child(25),
-table.cobertura_table tbody th:nth-child(26),
-table.cobertura_table tbody th:nth-child(27)
- {
-  background: #ffe8fd;
-}
-
-/* COLORES TABLA Columma Municipal */
-table.cobertura_table thead tr:first-child th:nth-child(19),
-
-table.cobertura_table thead tr:nth-of-type(2) th:nth-child(27),
-table.cobertura_table thead tr:nth-of-type(2) th:nth-child(28),
-table.cobertura_table thead tr:nth-of-type(2) th:nth-child(29),
-table.cobertura_table thead tr:nth-of-type(2) th:nth-child(30)   
-{
-  background: #569b75;
-}
-
-
-table.cobertura_table tbody td:nth-of-type(28),
-table.cobertura_table tbody td:nth-of-type(29),
-table.cobertura_table tbody td:nth-of-type(30),
-table.cobertura_table tbody td:nth-of-type(31),
-
-table.cobertura_table tbody th:nth-child(28),
-table.cobertura_table tbody th:nth-child(29),
-table.cobertura_table tbody th:nth-child(30),
-table.cobertura_table tbody th:nth-child(31)
-{
-  background: #aff5cf;
-}
-
-
-
 
 /* ESTILO TABLA 2 */
 
