--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -86,5 +86,77 @@
 
 
 
+/* TOOLTIP 
+
+.tooltip2 {
+  position: relative;
+  background: green;
+  padding: 5px 12px;
+  margin: 5px;
+  font-size: 15px;
+  border-radius: 100%;
+  color: #fff;
+}
+
+.tooltip2:before,
+.tooltip2:after {
+  position: absolute;
+  content: "";
+  opacity: 0;
+  transition: all 0.4s ease;
+}
+
+.tooltip2:before {
+  border-width: 10px 8px 0 8px;
+  border-style: solid;
+  border-color: green transparent transparent transparent;
+  top: -15px;
+  transform: translateY(20px);
+}
+
+.tooltip2:after {
+  content: attr(data-tooltip);
+  background: green;
+  width: 160px;
+  height: 40px;
+  font-size: 13px;
+  font-weight: 300;
+  top: -75px;
+  left: -10px;
+  padding: 10px;
+  border-radius: 5px;
+  letter-spacing: 1px;
+  transform: translateY(20px);
+}
+
+.tooltip2:hover::before,
+.tooltip2:hover::after {
+  opacity: 1;
+  transform: translateY(-2px);
+}
+
+@keyframes shake {
+  0% {
+    transform: rotate(2deg);
+  }
+  50% {
+    transform: rotate(-3deg);
+  }
+  70% {
+    transform: rotate(3deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+#anim:hover {
+  animation: shake 500ms ease-in-out forwards;
+}
+*/
 
 
+.custom-tooltip {
+  --bs-tooltip-bg: #f230b9;
+}
