--- a/css/tabla.css
+++ b/css/tabla.css
@@ -56,8 +56,8 @@ table.cobertura_table tbody th {
 
 table.cobertura_table thead th {
   
-  background: /*#f3f0f3;
-   background: -moz-linear-gradient(top, #917089 0%, #7b5471 66%, #6D4162 100%);
+  background: none;
+  /* background: -moz-linear-gradient(top, #917089 0%, #7b5471 66%, #6D4162 100%);
   background: -webkit-linear-gradient(top, #917089 0%, #7b5471 66%, #6D4162 100%);
   background: linear-gradient(to bottom, #917089 0%, #7b5471 66%, #6D4162 100%);
   border-bottom: 4px solid #F230B9; 
@@ -147,8 +147,8 @@ table.cobertura_table th:first-child {
 
 
 table.cobertura_table td a, table.cobertura_table td {
-  transition: color 50ms ease-in-out,
-              background 50ms ease-in-out;
+  transition: color 50ms ease-in-out;
+  background: 50ms ease-in-out;
 }
 
 table.cobertura_table td:hover a {
