--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -44,10 +44,13 @@
   display: flex;
   align-items: center;
 }
+.encabezado .nav-menu a:hover {
+  text-decoration: underline;
+}
 
 .encabezado nav img {
-  height: 45px;
-  margin: 0px 3px 0px 3px;
+  height: 30px;
+  margin: 8px 3px 8px 3px;
 }
 
 .encabezado .nav-menu li p {
